fixed chrome emoji bug casuing it to look distorted.

--- a/styles/about-styles/about-styles.css
+++ b/styles/about-styles/about-styles.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   column-gap: 3em;
-  padding: 2em;
+  padding: 3em;
 }
 
 
