--- a/styles/landing-styles/landing-styles.css
+++ b/styles/landing-styles/landing-styles.css
@@ -74,6 +74,7 @@ h1 {
 }
 
 #emoji{
+  font-family: "Segoe UI Emoji", "Apple Color Emoji", "Noto Color Emoji", "Android Emoji", "EmojiOne Color", "Twemoji";
   font-size: 3vw;
   padding: 0 0 0 .25em;
 }
